// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`fillImports() > should return barrels and imports files for ('arc_default', oidc: false, graphql: false, swagger: true, passportjs: false, express: false, koa: false, mongoose: false) 1`] = `
{
  "architecture": "arc_default",
  "barrels": "["./src/controllers/rest/index.js","./src/controllers/pages/index.js"]",
  "express": false,
  "graphql": false,
  "imports": [
    {
      "from": "@tsed/ajv",
    },
    {
      "from": "@tsed/swagger",
    },
    {
      "from": "./config/index.js",
      "symbols": "{config}",
    },
    {
      "from": "./controllers/rest/index.js",
      "symbols": "* as rest",
    },
    {
      "from": "./controllers/pages/index.js",
      "symbols": "* as pages",
    },
  ],
  "koa": false,
  "mongoose": false,
  "oidc": false,
  "passportjs": false,
  "swagger": true,
}
`;

exports[`fillImports() > should return barrels and imports files for ('arc_default', oidc: true, graphql: false, swagger: false, passportjs: false, express: false, koa: true, mongoose: false) 1`] = `
{
  "architecture": "arc_default",
  "barrels": "["./src/controllers/rest/index.js","./src/interactions/index.js"]",
  "express": false,
  "graphql": false,
  "imports": [
    {
      "from": "@tsed/ajv",
    },
    {
      "from": "@tsed/oidc-provider",
    },
    {
      "from": "./config/index.js",
      "symbols": "{config}",
    },
    {
      "from": "./controllers/rest/index.js",
      "symbols": "* as rest",
    },
    {
      "from": "./controllers/pages/index.js",
      "symbols": "* as pages",
    },
    {
      "from": "./controllers/oidc/InteractionsController.js",
      "symbols": "{InteractionsController}",
    },
  ],
  "koa": false,
  "mongoose": false,
  "oidc": true,
  "passportjs": false,
  "swagger": false,
}
`;

exports[`fillImports() > should return barrels and imports files for ('arc_default', oidc: true, graphql: true, swagger: true, passportjs: true, express: false, koa: true, mongoose: true) 1`] = `
{
  "architecture": "arc_default",
  "barrels": "["./src/controllers/rest/index.js","./src/controllers/pages/index.js","./src/interactions/index.js","./src/datasources/index.js","./src/resolvers/index.js"]",
  "express": false,
  "graphql": true,
  "imports": [
    {
      "from": "@tsed/ajv",
    },
    {
      "from": "@tsed/swagger",
    },
    {
      "from": "@tsed/mongoose",
    },
    {
      "from": "@tsed/oidc-provider",
    },
    {
      "from": "@tsed/passport",
    },
    {
      "from": "@tsed/typegraphql",
    },
    {
      "from": "./datasources/index.js",
    },
    {
      "from": "./resolvers/index.js",
    },
    {
      "from": "./config/index.js",
      "symbols": "{config}",
    },
    {
      "from": "./controllers/rest/index.js",
      "symbols": "* as rest",
    },
    {
      "from": "./controllers/pages/index.js",
      "symbols": "* as pages",
    },
    {
      "from": "./controllers/oidc/InteractionsController.js",
      "symbols": "{InteractionsController}",
    },
  ],
  "koa": false,
  "mongoose": true,
  "oidc": true,
  "passportjs": true,
  "swagger": true,
}
`;

exports[`fillImports() > should return barrels and imports files for ('feature', oidc: false, graphql: false, swagger: false, passportjs: false, express: false, koa: false, mongoose: false) 1`] = `
{
  "architecture": "feature",
  "barrels": "["./src/rest/index.js"]",
  "express": false,
  "graphql": false,
  "imports": [
    {
      "from": "@tsed/ajv",
    },
    {
      "from": "./config/index.js",
      "symbols": "{config}",
    },
    {
      "from": "./rest/index.js",
      "symbols": "* as rest",
    },
  ],
  "koa": false,
  "mongoose": false,
  "oidc": false,
  "passportjs": false,
  "swagger": false,
}
`;

exports[`fillImports() > should return barrels and imports files for ('feature', oidc: false, graphql: false, swagger: true, passportjs: false, express: false, koa: false, mongoose: false) 1`] = `
{
  "architecture": "feature",
  "barrels": "["./src/rest/index.js","./src/pages/index.js"]",
  "express": false,
  "graphql": false,
  "imports": [
    {
      "from": "@tsed/ajv",
    },
    {
      "from": "@tsed/swagger",
    },
    {
      "from": "./config/index.js",
      "symbols": "{config}",
    },
    {
      "from": "./rest/index.js",
      "symbols": "* as rest",
    },
    {
      "from": "./pages/index.js",
      "symbols": "* as pages",
    },
  ],
  "koa": false,
  "mongoose": false,
  "oidc": false,
  "passportjs": false,
  "swagger": true,
}
`;

exports[`fillImports() > should return barrels and imports files for ('feature', oidc: true, graphql: false, swagger: false, passportjs: false, express: true, koa: false, mongoose: false) 1`] = `
{
  "architecture": "feature",
  "barrels": "["./src/rest/index.js","./src/interactions/index.js"]",
  "express": false,
  "graphql": false,
  "imports": [
    {
      "from": "@tsed/ajv",
    },
    {
      "from": "@tsed/oidc-provider",
    },
    {
      "from": "./config/index.js",
      "symbols": "{config}",
    },
    {
      "from": "./rest/index.js",
      "symbols": "* as rest",
    },
    {
      "from": "./pages/index.js",
      "symbols": "* as pages",
    },
    {
      "from": "./controllers/oidc/InteractionsController.js",
      "symbols": "{InteractionsController}",
    },
  ],
  "koa": false,
  "mongoose": false,
  "oidc": true,
  "passportjs": false,
  "swagger": false,
}
`;

exports[`fillImports() > should return barrels and imports files for ('feature', oidc: true, graphql: true, swagger: true, passportjs: true, express: true, koa: false, mongoose: true) 1`] = `
{
  "architecture": "feature",
  "barrels": "["./src/rest/index.js","./src/pages/index.js","./src/interactions/index.js","./src/datasources/index.js","./src/resolvers/index.js"]",
  "express": false,
  "graphql": true,
  "imports": [
    {
      "from": "@tsed/ajv",
    },
    {
      "from": "@tsed/swagger",
    },
    {
      "from": "@tsed/mongoose",
    },
    {
      "from": "@tsed/oidc-provider",
    },
    {
      "from": "@tsed/passport",
    },
    {
      "from": "@tsed/typegraphql",
    },
    {
      "from": "./datasources/index.js",
    },
    {
      "from": "./resolvers/index.js",
    },
    {
      "from": "./config/index.js",
      "symbols": "{config}",
    },
    {
      "from": "./rest/index.js",
      "symbols": "* as rest",
    },
    {
      "from": "./pages/index.js",
      "symbols": "* as pages",
    },
    {
      "from": "./controllers/oidc/InteractionsController.js",
      "symbols": "{InteractionsController}",
    },
  ],
  "koa": false,
  "mongoose": true,
  "oidc": true,
  "passportjs": true,
  "swagger": true,
}
`;
